--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,15 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --cover-image: url(../images/cover-image-light.png);
+  --accent-color: #ff8dcb;
+  --accent-color-title: #353430;
+  --accent-color-dz: #353430;
+  --background-color: #353430;
+  --title-color: #ffc2e6;
+  --text-color: #353430;
+  --button-color: #32312d66;
+  --accent-color-rec: transparent;
+  --background-color-all: white;
+  --menu-color: #353430;
 }
