--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --accent-color-rec: #FF0070;
+  --background-color: #000028;
+  --title-color: #db00ff;
+  --text-color: #f1b2ce;
+  --button-color: #ff007066;
+  --cover-image: url(../images/cover-image-dark.png);
 }
