--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,384 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  margin: 0 auto;
+  padding: 10px;
+  color: var(--text-color);
+  font-family: 'IBM Plex mono', sans-serif;
+  font-size: 18px;
+  background-color: var(--background-color-all);
+}
+
+.header {
+  display: grid;
+  grid-template-rows: auto max-content auto;
+  align-items: center;
+  background-image: var(--cover-image);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header__decorated-element {
+  position: absolute;
+  display: flex;
+  margin: 2px 10px 0px 0px;
+  color: var(--accent-color-rec);
+  font-size: 18px;
+  gap: 10px;
+  align-items: center;
+  inset-inline-end: 0;
+  inset-block-start: 0;
+}
+
+.header__decorated-element::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  background-color: var(--accent-color-rec);
+  box-shadow: 0 0 2px 4px var(--accent-color-rec);
+  inline-size: 9px;
+  block-size: 9px;
+}
+
+.decorated-zone {
+  position: relative;
+  min-block-size: 97vh;
+}
+
+@media (min-width:1024) {
+  .decorated-zone {
+    min-block-size: 95vh;
+  }
+}
+
+.decorated-zone::before {
+  content: '';
+  position:absolute;
+  border-top: 1px solid var(--accent-color-dz);
+  border-right: 1px solid var(--accent-color-dz);
+  inline-size: 25px;
+  block-size: 25px;
+  inset-inline-end: 0;
+  inset-block-start: 0;
+}
+
+.decorated-zone::after {
+  content: '';
+  position:absolute;
+  border-top: 1px solid var(--accent-color-dz);
+  border-right: 1px solid var(--accent-color-dz);
+  inline-size: 25px;
+  block-size: 25px;
+  inset-inline-start: 0;
+  inset-block-end: 0;
+  transform: rotate(180deg);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin: 5px 0 0 0;
+}
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media (min-width: 768px) {
+  .header__theme-menu {
+    margin: 10px 0 0 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    align-self: self-start;
+    margin: 0;
+  }
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 0 10px;
+  outline: transparent;
+  color: var(--menu-color);
+  text-transform: lowercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  text-decoration: underline;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--menu-color);
+  text-decoration: none;
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--menu-color);
+  pointer-events: none;
+}
+
+.header__title {
+  color: var(--title-color);
+  font-weight: 700;
+  font-size: var(--font-size-mobile);
+  line-height: 95.7px;
+}
+
+@media (min-width: 1024px) {
+  .header__title {
+    font-size: var(--font-size-desktop);
+  }
+}
+
+.title-text-shadow {
+  align-self: self-start;
+  margin: 15px 0 0;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+@media (min-width: 768px) {
+
+  .title-text-shadow {
+    margin: 20px 0 0 -20px;
+  }
+}
+
+@media (min-width: 1024px) {
+
+  .title-text-shadow {
+    margin: 45px 0 0 -20px;
+  }
+}
+
+.header__title-text {
+  justify-self: end;
+  margin: 0;
+  padding-right: 50px;
+  max-inline-size: 355px;
+}
+
+@media (min-width: 1024px) {
+  .header__title-text {
+    margin: 0;
+    padding: 0;
+    max-inline-size: 491px;
+  }
+}
+
+/*Секция "Почему..."*/
+.section-one {
+  margin: 49px 0 0;
+}
+
+@media (min-width: 768px) {
+  .section-one {
+    display: grid;
+    grid-template-columns: 236px 1fr;
+    column-gap: 20px;
+    margin: 81px 0 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .section-one {
+    grid-template-columns: 315px 1fr;
+  }
+}
+
+/*Секция "Что..."*/
+.section-two {
+  margin: 50px 0 0;
+}
+
+@media (min-width: 768px) {
+  .section-two {
+    margin: 60px 0 0;
+  }
+
+  .section-two__title {
+    max-inline-size: 236px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .section-two__title {
+    max-inline-size: 315px;
+  }
+
+  .section-two__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+  }
+}
+
+/*Секция "Как..."*/
+  .section-three {
+    margin: 50px 0 0;
+  }
+
+  @media (min-width: 768px) {
+    .section-three {
+      display: grid;
+      grid-template-columns: 236px 1fr;
+      column-gap: 20px;
+      margin: 80px 0 0;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .section-three {
+      display: grid;
+      grid-template-columns: 315px 1fr;
+      margin: 60px 0 0;
+    }
+  }
+
+  .section-three__list-container-title {
+    margin: 0 0 20px;
+  }
+
+  .section-three__list-title {
+    font-weight: 400;
+  }
+
+/*Секция "Галерея"*/
+.gallery {
+  margin: 50px 0 47px;
+}
+
+.gallery__title {
+  margin: 0;
+}
+
+.gallery__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0 0;
+}
+
+.gallery__img {
+  inline-size: 100%;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+    margin: 60px 0 74px;
+  }
+
+  .gallery__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, fit-content);
+    row-gap: 20px;
+    column-gap: 20px;
+    margin: 19px 0 0;
+  }
+
+  .gallery__list-item:nth-child(1) {
+    grid-column: 1 / 3;
+  }
+
+  .gallery__list-item:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__list-item:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__list-item:last-child {
+    grid-column: 2 / 4;
+  }
+
+  .gallery__img {
+    object-fit: cover;
+    object-position: top;
+    block-size: 100%;
+  }
+}
+
+/*"Футер"*/
+.footer {
+  display: grid;
+}
+
+.footer__text {
+  align-self: center;
+  justify-self: center;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.footer__text-shadow {
+  color: var(--title-color);
+  font-weight: 700;
+  font-size: var(--font-size-mobile);
+  line-height: 95.7px;
+}
+
+@media (min-width: 1024px) {
+
+  .footer__text-shadow {
+    font-size: var(--font-size-desktop);
+  }
+}
+
+
+/*Настройки*/
+.title-text__background__text__bold {
+  color: var(--background-color);
+  background-color: var(--accent-color);
+  font-size: 18px;
+  line-height: 130%;
+  font-weight: 700;
+}
+
+.title-text__background__text {
+  color: var(--background-color);
+  background-color: var(--accent-color);
+  font-size: 17px;
+  line-height: 130%;
+  font-weight: 400;
+}
+
+.h2-title {
+  color: var(--accent-color-title);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 130%;
+  margin: 0 0 20px;
+}
+
+.section-one__link {
+  text-decoration: underline;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.section-three__link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.content-text {
+  margin: 10px 0 0 0;
+  line-height: 130%;
 }
