--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,18 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-color: #FF0070;
+  --accent-color-title: #FF0070;
+  --accent-color-rec: #FF0070;
+  --accent-color-dz: #FF0070;
+  --menu-color: #FF0070;
+  --background-color: #000028;
+  --background-color-all:#000028;
+  --button-color:rgba(255, 0, 112, 0.4);
+  --text-color: #f1b2ce;
+  --title-color: #db00ff;
+  --cover-image: url(../images/cover-image-dark.png);
+  --font-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --font-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+}
