--- a/styles/style.css
+++ b/styles/style.css
@@ -2,18 +2,12 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   padding: 10px;
   color: var(--text-color);
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: 'IBM Plex mono', monospace;
   font-size: 18px;
   background-color: var(--background-color-all);
-}
-
-.header {
-  display: grid;
-  grid-template-rows: auto max-content auto;
-  align-items: center;
   background-image: var(--cover-image);
   background-repeat: no-repeat;
   background-position: top center;
@@ -21,7 +15,23 @@
   background-attachment: fixed;
 }
 
+.header {
+  block-size: 100vh;
+  min-height: 668px;
+  margin: 10px 12px 0px 0px;
+  display: grid;
+  grid-template-rows: auto max-content auto;
+  align-items: center;
+}
+
+@media (max-width: 767px) {
+  .header {
+    margin: 0;
+  }
+}
+
 .header__decorated-element {
+  text-transform: uppercase;
   position: absolute;
   display: flex;
   margin: 2px 10px 0px 0px;
@@ -38,20 +48,13 @@
   display: block;
   border-radius: 50%;
   background-color: var(--accent-color-rec);
-  box-shadow: 0 0 2px 4px var(--accent-color-rec);
+  box-shadow: 0 0 4px 2px var(--accent-color-rec);
   inline-size: 9px;
   block-size: 9px;
 }
 
 .decorated-zone {
   position: relative;
-  min-block-size: 97vh;
-}
-
-@media (min-width:1024) {
-  .decorated-zone {
-    min-block-size: 95vh;
-  }
 }
 
 .decorated-zone::before {
@@ -72,35 +75,69 @@
   border-right: 1px solid var(--accent-color-dz);
   inline-size: 25px;
   block-size: 25px;
-  inset-inline-start: 0;
-  inset-block-end: 0;
+  inset-inline-start: 10px;
+  inset-block-end: 40px;
   transform: rotate(180deg);
+}
+
+@media (max-width: 767px) {
+  .decorated-zone::after {
+    inset-inline-start: 0;
+    inset-block-end: 20px;
+  }
 }
 
 .header__theme-menu {
   justify-self: end;
   margin: 5px 0 0 0;
 }
+
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
+@media (max-width: 767px) {
+  .header__theme-menu {
+    min-height: 150px;
+    margin: -10px 4px 0 0;
+  }
+
+  .header__theme-menu-list {
+    gap: 12px;
+  }
+}
+
 @media (min-width: 768px) {
   .header__theme-menu {
-    margin: 10px 0 0 0;
+    min-width: 728px;
+    min-height: 200px;
+    margin: -8px -4px 0 0;
+    padding: 0px 0 0 660px;
+  }
+
+  .header__theme-menu-list {
+    gap: 11px;
   }
 }
 
 @media (min-width: 1024px) {
   .header__theme-menu {
+
+    /*min-width: 235px;
+    min-height: 26px;*/
     justify-self: center;
     align-self: self-start;
-    margin: 0;
+    margin: 0px 0 0 -2px;
+    padding: 0px 250px 0 275px;
   }
+
   .header__theme-menu-list {
+    /*justify-content: center;*/
     flex-direction: row;
+    padding: 0.5px 15px 0 3px;
+    gap: 12px;
   }
 }
 
@@ -118,11 +155,6 @@
   outline: 1px solid var(--button-color);
 }
 
-.header__theme-menu-button:focus {
-  outline: none;
-  text-decoration: underline;
-}
-
 .header__theme-menu-button:focus-visible {
   border-bottom: 1px solid var(--menu-color);
   text-decoration: none;
@@ -138,124 +170,178 @@
   color: var(--title-color);
   font-weight: 700;
   font-size: var(--font-size-mobile);
-  line-height: 95.7px;
-}
-
-@media (min-width: 1024px) {
-  .header__title {
-    font-size: var(--font-size-desktop);
-  }
-}
-
-.title-text-shadow {
+  line-height: 82.5%;
   align-self: self-start;
   margin: 15px 0 0;
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
+  .header__title {
+    margin: -60px 0 0 0px;
+    padding: 0;
+  }
+}
 
-  .title-text-shadow {
-    margin: 20px 0 0 -20px;
+@media (min-width: 768px) {
+  .header__title {
+  margin: -118px 0 0 -10px;
+  padding: 0 0 115px 0;
   }
 }
 
 @media (min-width: 1024px) {
-
-  .title-text-shadow {
-    margin: 45px 0 0 -20px;
+  .header__title {
+    font-size: var(--font-size-desktop);
+    margin: -185px 0 0 -10px;
+    padding: 0 0 40px 0;
   }
 }
 
 .header__title-text {
   justify-self: end;
-  margin: 0;
-  padding-right: 50px;
+  margin: -16px 0 0 0;
   max-inline-size: 355px;
+}
+
+@media (min-width: 768px) {
+  .header__title-text {
+    margin: -156px 0 0 0;
+    max-inline-size: 363px;
+  }
 }
 
 @media (min-width: 1024px) {
   .header__title-text {
-    margin: 0;
-    padding: 0;
+    margin: -96px -1px 0px 0px;
     max-inline-size: 491px;
   }
 }
 
+/*Основной блок*/
+.main {
+  padding: 0px 10px 0px 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 767px) {
+  .main {
+    padding: 0;
+  }
+}
+
 /*Секция "Почему..."*/
-.section-one {
-  margin: 49px 0 0;
+.section-why {
+  margin: 34px 0 0;
+  display: grid;
+  row-gap: 15px;
 }
 
 @media (min-width: 768px) {
-  .section-one {
-    display: grid;
+  .section-why {
     grid-template-columns: 236px 1fr;
     column-gap: 20px;
-    margin: 81px 0 0;
+    margin: 41px 0 0;
+    row-gap: 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .section-one {
+  .section-why {
     grid-template-columns: 315px 1fr;
+    margin: 40px 0 0 0;
+    row-gap: 0;
   }
+}
+
+.section-why__list {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
 }
 
 /*Секция "Что..."*/
-.section-two {
+.section-what {
   margin: 50px 0 0;
 }
 
+.section-what__title {
+  margin: 0 0 20px 0;
+}
+
+.section-what__list {
+  display: grid;
+  grid-template-rows: 1fr, 1fr, 1fr;
+  max-block-size: 1119px;
+  row-gap: 20px;
+}
+
 @media (min-width: 768px) {
-  .section-two {
-    margin: 60px 0 0;
+  .section-what {
+    margin: 80px 0 0;
   }
 
-  .section-two__title {
+  .section-what__title {
     max-inline-size: 236px;
+    margin: 0 0 20px;
+  }
+
+  .section-what__list {
+    grid-template-rows: 1fr 1fr 1fr;
+    max-block-size: 585px;
+    row-gap: 0;
   }
 }
 
 @media (min-width: 1024px) {
-  .section-two__title {
+  .section-what {
+    margin: 60px 0 0 2px;
+  }
+  
+  .section-what__title {
+    margin: 20px 0 20px 0;
     max-inline-size: 315px;
   }
 
-  .section-two__list {
-    display: grid;
+  .section-what__list {
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 20px;
+    max-block-size: 498px;
+    column-gap: 18px;
+    row-gap: 0;
   }
 }
 
 /*Секция "Как..."*/
-  .section-three {
+  .section-how {
     margin: 50px 0 0;
+    display: grid;
+    row-gap: 21px;
   }
 
   @media (min-width: 768px) {
-    .section-three {
-      display: grid;
+    .section-how {
       grid-template-columns: 236px 1fr;
       column-gap: 20px;
+      row-gap: 0;
       margin: 80px 0 0;
     }
   }
 
   @media (min-width: 1024px) {
-    .section-three {
-      display: grid;
+    .section-how {
       grid-template-columns: 315px 1fr;
-      margin: 60px 0 0;
+      row-gap: 0;
+      margin: 13px 0 0;
     }
   }
 
-  .section-three__list-container-title {
-    margin: 0 0 20px;
+  .section-how__list-container-title {
+    margin: 0px;
   }
 
-  .section-three__list-title {
+  .section-how__list-title {
+    margin: 20px 0 0 0;
     font-weight: 400;
   }
 
@@ -265,32 +351,33 @@
 }
 
 .gallery__title {
-  margin: 0;
+  margin: 0px;
 }
 
 .gallery__list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin: 10px 0 0;
+  gap: 6px;
+  margin: 10px 0 -10px 0;
 }
 
 .gallery__img {
   inline-size: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 @media (min-width: 768px) {
   .gallery {
-    margin: 60px 0 74px;
+    margin: 80px 0 74px;
   }
 
   .gallery__list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, fit-content);
-    row-gap: 20px;
+    row-gap: 17px;
     column-gap: 20px;
-    margin: 19px 0 0;
+    margin: 19px 0px 10px 2px;
   }
 
   .gallery__list-item:nth-child(1) {
@@ -312,14 +399,14 @@
   }
 
   .gallery__img {
-    object-fit: cover;
-    object-position: top;
     block-size: 100%;
   }
 }
 
 /*"Футер"*/
 .footer {
+  block-size: 100vh;
+  min-height: 668px;
   display: grid;
 }
 
@@ -327,25 +414,76 @@
   align-self: center;
   justify-self: center;
   text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-.footer__text-shadow {
   color: var(--title-color);
   font-weight: 700;
   font-size: var(--font-size-mobile);
   line-height: 95.7px;
+  margin: -10px 0 0 0;
 }
 
-@media (min-width: 1024px) {
+.decorated-zone__footer {
+  position: relative;
+}
 
-  .footer__text-shadow {
+.decorated-zone__footer::before {
+  content: '';
+  position:absolute;
+  border-top: 1px solid var(--accent-color-dz);
+  border-right: 1px solid var(--accent-color-dz);
+  inline-size: 25px;
+  block-size: 25px;
+  right: 0px;
+  inset-block-start: 7px;
+}
+
+.decorated-zone__footer::after {
+  content: '';
+  position:absolute;
+  border-top: 1px solid var(--accent-color-dz);
+  border-right: 1px solid var(--accent-color-dz);
+  inline-size: 25px;
+  block-size: 25px;
+  inset-inline-start: 1px;
+  inset-block-end: 15px;
+  transform: rotate(180deg);
+}
+
+@media (min-width: 768px) {
+  .footer__text {
     font-size: var(--font-size-desktop);
+    margin: -52px 0 0 0;
+  }
+  
+  .decorated-zone__footer::before {
+    right: 10px;
+    inset-block-start: -10px;
+  }
+  
+  .decorated-zone__footer::after {
+    inset-inline-start: 11px;
+    inset-block-end: 51px;
   }
 }
 
+@media (min-width: 1024px) {
+  .footer__text {
+    font-size: var(--font-size-desktop);
+    margin: -49px 0 0 0;
+  }
+  
+  .decorated-zone__footer::before {
+    right: 10px;
+    inset-block-start: -10px;
+  }
+  
+  .decorated-zone__footer::after {
+    inset-inline-start: 11px;
+    inset-block-end: 51px;
+  }
+}
 
 /*Настройки*/
-.title-text__background__text__bold {
+.title-decor {
   color: var(--background-color);
   background-color: var(--accent-color);
   font-size: 18px;
@@ -353,33 +491,32 @@
   font-weight: 700;
 }
 
-.title-text__background__text {
+.title-decor-short {
   color: var(--background-color);
   background-color: var(--accent-color);
-  font-size: 17px;
+  font-size: 18px;
   line-height: 130%;
   font-weight: 400;
 }
 
-.h2-title {
+.header-decor {
   color: var(--accent-color-title);
   font-weight: 700;
   font-size: 18px;
   line-height: 130%;
-  margin: 0 0 20px;
-}
+} 
 
-.section-one__link {
+.section-why__link {
   text-decoration: underline;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.section-three__link {
+.section-how__link {
   text-decoration: none;
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 .content-text {
-  margin: 10px 0 0 0;
+  margin: 10px 0 0px 0;
   line-height: 130%;
 }
