Выполнена корректировка проекта с учетом замечаний ревьюера_3_по CSS

--- a/styles/light.css
+++ b/styles/light.css
@@ -6,15 +6,16 @@
 @media (prefers-color-scheme: light) {
   :root {
     --cover-image: url(../images/cover-image-light.png);
+    --accent-color-rec: transparent;
     --accent-color: #ff8dcb;
-    --accent-color-title: #353430;
     --accent-color-dz: #353430;
     --background-color: #353430;
     --title-color: #ffc2e6;
+    --title-color-shadow: #ff0070;
     --text-color: #353430;
     --button-color: #32312d66;
-    --accent-color-rec: transparent;
     --background-color-all: white;
+    --accent-color-title: #353430;
     --menu-color: #353430;
   }
 }
@@ -30,6 +31,7 @@
   --accent-color-dz: #353430;
   --background-color: #353430;
   --title-color: #ffc2e6;
+  --title-color-shadow: #ff0070;
   --text-color: #353430;
   --button-color: #32312d66;
   --accent-color-rec: transparent;
