--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,17 +3,36 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --cover-image: url(../images/cover-image-dark.png); 
+    --accent-color-rec: #FF0070;
+    --accent-color: #ff0070;
+    --accent-color-dz: #FF0070;
+    --accent-color-title: #ff0070;
+    --background-color: #000028;
+    --title-color: #db00ff;
+    --title-color-shadow: #ff0070;
+    --text-color: #f1b2ce;
+    --button-color: #ff007066;
+    --menu-color: #FF0070;
+  }
+}
 
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #ff0070;
+  --cover-image: url(../images/cover-image-dark.png); 
   --accent-color-rec: #FF0070;
+  --accent-color: #ff0070;
+  --accent-color-dz: #FF0070;
+  --accent-color-title: #ff0070;
   --background-color: #000028;
   --title-color: #db00ff;
+  --title-color-shadow: #ff0070;
   --text-color: #f1b2ce;
   --button-color: #ff007066;
-  --cover-image: url(../images/cover-image-dark.png);
+  --menu-color: #FF0070;
 }
