--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  padding: 10px;
   color: var(--text-color);
   font-family: 'IBM Plex mono', monospace;
   font-size: 18px;
@@ -17,19 +16,26 @@
   display: grid;
   block-size: 100vh;
   min-height: 668px;
+  padding: 0 10px;
 }
 
 .header__decorated-element {
   text-transform: uppercase;
   position: absolute;
   display: flex;
-  margin: 0;
+  margin: 10px 10px 0 0;
   color: var(--accent-color-rec);
   font-size: 18px;
   gap: 9.5px;
   align-items: center;
   inset-inline-end: 10px;
   inset-block-start: 0px;
+}
+
+@media (min-width: 768px) {
+  .header__decorated-element {
+    margin: 20px 20px 0 0;
+  }
 }
 
 .header__decorated-element::after {
@@ -47,56 +53,36 @@
 }
 
 .decorated-zone::before {
-  display: grid;
-  justify-self: end;
   content: '';
   position:absolute;
-  border-top: 1px solid var(--accent-color-dz);
-  border-right: 1px solid var(--accent-color-dz);
-  inline-size: 25px;
-  block-size: 25px;
-  right: 0px;
-  top: 0px;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--accent-color-dz);
+  border-bottom: 1px solid var(--accent-color-dz);
+  left: 10px;
+  bottom: 10px;
 }
 
 .decorated-zone::after {
-  display: grid;
   content: '';
   position:absolute;
+  width: 25px;
+  height: 25px;
   border-top: 1px solid var(--accent-color-dz);
   border-right: 1px solid var(--accent-color-dz);
-  inline-size: 25px;
-  block-size: 25px;
-  left: 0px;
-  bottom: 20px;
-  transform: rotate(180deg);
+  top: 10px;
+  right: 10px;
 }
 
 @media (min-width: 768px) {
-  .decorated-zone {
-    margin: 10px 10px 0 0;
-  }
-  
-  .header__decorated-element {
-    margin: 2px 10px 0 0;
-    inset-inline-end: 0;
-  }
-
   .decorated-zone::before {
-    left: 10px;
-    bottom: 10px;
+    left: 20px;
+    bottom: 20px;
   }
 
   .decorated-zone::after {
-    left: 10px;
-    bottom: 40px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .decorated-zone::before {
-    right: 1px;
-    top: 0px;
+    top: 20px;
+    right: 20px;
   }
 }
 
@@ -109,7 +95,7 @@
   display: flex;
   justify-content: center;
   justify-self: end;
-  margin: 28px 0 0;
+  margin: 40px 0 0;
   align-items: end;
   flex-direction: column;
   gap: 12px;
@@ -117,13 +103,13 @@
 
 @media (min-width: 768px) {
   .header__theme-menu-list {
-    margin: 68px 0 0;
+    margin: 99px 10px 0 0;
   }
 }
 
 @media (min-width: 1024px) {
   .header__theme-menu {
-    padding: 0 0 0 11px;
+    padding: 20px 0 0 0;
     justify-self: center;
   }
 
@@ -131,7 +117,7 @@
     margin: 0;
     align-items: flex-start;
     flex-direction: row;
-    gap: 5px;
+    gap: 8px;
   }
 }
 
@@ -166,7 +152,7 @@
 
 @media (min-width: 1024px) {
   .header__theme-menu-button {
-    padding: 1px 17px 0 17px;
+    padding: 1px 14px 0 14px;
   }
 }
 
@@ -194,20 +180,20 @@
   font-size: var(--font-size-mobile);
   line-height: 82.5%;
   align-self: start;
-  margin: 30px 0 0 0;
+  margin: 36px 0 0 0;
   text-shadow: 4px 4px 0 var(--title-color-shadow);
 }
 
 @media (min-width: 768px) {
   .header__title {
-    margin: 80px 0 0 -1.5%;
+    margin: 86px 0 0 -1.4%;
   }
 }
 
 @media (min-width: 1024px) {
   .header__title {
     font-size: var(--font-size-desktop);
-    margin: 120px 0 0 -1%;
+    margin: 143px 0 0 -1%;
   }
 }
 
@@ -220,13 +206,21 @@
 @media (min-width: 768px) {
   .header__title-text {
     justify-self: end;
-    width: 49.5%;
+    width: 49%;
+    margin: 3px 9px 2px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__title-text {
+    margin: 0 10px 2px 0;
   }
 }
 
 /*Основной блок*/
 .main {
-  margin: 30px 0 48px 0;
+  margin: 40px 0 40px 0;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -234,16 +228,15 @@
 
 @media (min-width: 768px) {
   .main {
-    margin: 40px 0 20px 0;
-    padding: 0 10px;
+    margin: 60px 0 0 0;
+    padding: 0 20px;
     gap: 80px;
   }
 }
 
 @media (min-width: 1024px) {
   .main {
-    margin: 41px 0 0 0;
-    padding: 0 10px;
+    margin: 60px 0 0 0;     
   }
 }
 
@@ -312,7 +305,6 @@
 
   @media (min-width: 768px) {
     .section-how {
-      /*margin: 0;*/
       grid-template-columns: 236px 1fr;
       column-gap: 20px;
       row-gap: 0;
@@ -391,7 +383,7 @@
   justify-self: center;
   align-self: center;
   text-align: center;
-  margin: 0 0 10px 0;
+  margin: 2px 0 0 0;
   text-shadow: 2px 2px 0 var(--accent-color);
   color: var(--title-color);
   font-weight: 700;
@@ -399,21 +391,11 @@
 }
 
 @media (min-width: 768px) {
-  .footer {
-    margin: 10px 10px 0 0;
-  }
-
   .footer__text {
     font-size: var(--font-size-desktop);
-    margin: 0 0 40px 10px;
+    margin: 0 0 0 3px;
   }
 } 
-
-@media (min-width: 1024px) {
-  .footer {
-    margin: 16px 10px 0 0;
-  }
-}
 
 /*Настройки*/
 .section__title {
@@ -446,7 +428,7 @@
 }
 
 .section__link:hover {
-  text-decoration: underline;
+  border-block-end: 1px solid var(--text-color);
 }
 
 .section__link:focus {
